--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recording studio</title>
+  <title>Recording-studio</title>
 
   <!-- Иконка сайта -->
   <link rel="icon" href="src/image/ico.svg">
